automated commit bash-profile to keep computers in sync